--- a/calculator.html
+++ b/calculator.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <div class="main-ctr">
-        
-     <div class="container w-25 mt-5 cal-ctr">
-        <div class="calculator bg-dark p-3 rounded">
-            <div class="calculator-display text-right mb-3">
-                <input type="text" id="display" class="form-control text-right" disabled value="0">
+     <div class="container-cal mt-5 cal-ctr">
+        <div class="calculator-output">
+            <div class="calculator-display">
+                <input type="text" id="display" class="" disabled value="0">
             </div>
             <div class="calculator-keys">
                 <div class="row  my-2">
@@ -53,5 +52,15 @@
 <script src="./index.js"></script>
     
 </body>
-</html>
+</html> 
+
+
+
+
+
+
+
+
+
+
 
